--- a/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj
+++ b/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj
@@ -114,18 +114,10 @@ xcopy /y "$(SolutionDir)C3D\Kernel\$(Configuration)\c3d.dll" "$(SolutionDir)$(Pl
   <ItemGroup>
     <ClCompile Include="Build_Assembly.cpp" />
     <ClCompile Include="Build_Base.cpp" />
-    <ClCompile Include="Build_Bolt.cpp" />
-    <ClCompile Include="Build_Brass_Collar.cpp" />
-    <ClCompile Include="Build_Clamping_Bar.cpp" />
-    <ClCompile Include="Build_Create_O_Ring.cpp" />
-    <ClCompile Include="Build_Main_Body.cpp" />
-    <ClCompile Include="Build_Seal_Housing.cpp" />
-    <ClCompile Include="Build_Shaft.cpp" />
-    <ClCompile Include="Build_ShaftPivot.cpp" />
-    <ClCompile Include="Build_Socket_Head_Collar.cpp" />
-    <ClCompile Include="Build_Top_Guide.cpp" />
     <ClCompile Include="FileController.cpp" />
     <ClCompile Include="ParamsWidget.cpp" />
+    <ClCompile Include="LIS.ME22.3.002.01.001 %28Блок передний%29.cpp" />
+    <ClCompile Include="LIS.ME22.3.002.01.002 %28Зажим%29.cpp" />
     <ClCompile Include="Viewer.cpp" />
     <QtRcc Include="MainWindow.qrc" />
     <QtUic Include="MainWindow.ui" />
