--- a/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj
+++ b/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj
@@ -118,6 +118,8 @@ xcopy /y "$(SolutionDir)C3D\Kernel\$(Configuration)\c3d.dll" "$(SolutionDir)$(Pl
     <ClCompile Include="ParamsWidget.cpp" />
     <ClCompile Include="LIS.ME22.3.002.01.001 %28Блок передний%29.cpp" />
     <ClCompile Include="LIS.ME22.3.002.01.002 %28Зажим%29.cpp" />
+    <ClCompile Include="LIS.ME22.3.002.00.005 %28Опора Цилиндра%29.cpp" />
+    <ClCompile Include="LIS.ME22.3.002.00.004 %28Стойка%29.cpp" />
     <ClCompile Include="Viewer.cpp" />
     <QtRcc Include="MainWindow.qrc" />
     <QtUic Include="MainWindow.ui" />
