--- a/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj
+++ b/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj
@@ -127,6 +127,7 @@ xcopy /y "$(SolutionDir)C3D\Kernel\$(Configuration)\c3d.dll" "$(SolutionDir)$(Pl
     <ClCompile Include="LIS.ME22.3.002.01.007 %28Втулка%29.cpp" />
     <ClCompile Include="LIS.ME22.3.002.01.008 %28Втулка тонкая%29.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="GHOST.cpp" />
     <ClCompile Include="Viewer.cpp" />
     <QtRcc Include="MainWindow.qrc" />
     <QtUic Include="MainWindow.ui" />
