--- a/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj.filters
+++ b/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj.filters
@@ -103,6 +103,9 @@
     <ClCompile Include="LIS.ME22.3.002.00.016 (Стол).cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LIS.ME22.3.002.00.011 (Кронштейн регулировочный).cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="colorDef.h">
