--- a/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj.filters
+++ b/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj.filters
@@ -127,6 +127,9 @@
     <ClCompile Include="LIS.ME22.3.002.00.015 (Болт крепежный).cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LIS_ME22_3_002_04_001.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="colorDef.h">
