--- a/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj
+++ b/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj
@@ -126,6 +126,10 @@ xcopy /y "$(SolutionDir)C3D\Kernel\$(Configuration)\c3d.dll" "$(SolutionDir)$(Pl
     <ClCompile Include="LIS.ME22.3.002.00.016 (Стол).cpp" />
     <ClCompile Include="LIS.ME22.3.002.00.08 (Втулка самосмазывающая).cpp" />
     <ClCompile Include="LIS.ME22.3.002.01.005 (Шток).cpp" />
+    <ClCompile Include="LIS.ME22.3.002.02.001 (Шток Поршневой).cpp" />
+    <ClCompile Include="LIS.ME22.3.002.02.002 (Поршень).cpp" />
+    <ClCompile Include="LIS.ME22.3.002.02.003 (Колпачок).cpp" />
+    <ClCompile Include="LIS.ME22.3.002.02.004 (Кольцо уплотнителя).cpp" />
     <ClCompile Include="ParamsWidget.cpp" />
     <ClCompile Include="LIS.ME22.3.002.01.001 %28Блок передний%29.cpp" />
     <ClCompile Include="LIS.ME22.3.002.01.002 %28Зажим%29.cpp" />
