--- a/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj
+++ b/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj
@@ -130,6 +130,7 @@ xcopy /y "$(SolutionDir)C3D\Kernel\$(Configuration)\c3d.dll" "$(SolutionDir)$(Pl
     <ClCompile Include="LIS.ME22.3.002.02.002 (Поршень).cpp" />
     <ClCompile Include="LIS.ME22.3.002.02.003 (Колпачок).cpp" />
     <ClCompile Include="LIS.ME22.3.002.02.004 (Кольцо уплотнителя).cpp" />
+    <ClCompile Include="LIS.ME22.3.002.03.001 (Ось).cpp" />
     <ClCompile Include="ParamsWidget.cpp" />
     <ClCompile Include="LIS.ME22.3.002.01.001 %28Блок передний%29.cpp" />
     <ClCompile Include="LIS.ME22.3.002.01.002 %28Зажим%29.cpp" />
@@ -143,9 +144,8 @@ xcopy /y "$(SolutionDir)C3D\Kernel\$(Configuration)\c3d.dll" "$(SolutionDir)$(Pl
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="GHOST.cpp" />
     <ClCompile Include="LIS.ME22.3.002.00.003 %28Раздвижная тяга%29.cpp" />
-    <ClCompile Include="LIS_ME22_3_002_04_001.cpp" />
+    <ClCompile Include="LIS.ME22.3.002.04.001 %28Ось длинная%29.cpp" />
     <ClCompile Include="Viewer.cpp" />
-    <ClCompile Include="WasherM20.cpp" />
     <QtRcc Include="MainWindow.qrc" />
     <QtUic Include="MainWindow.ui" />
     <QtMoc Include="MainWindow.h" />
