feat: remove drill

--- a/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj.filters
+++ b/PneumocylinderConfigurator/PneumocylinderConfigurator.vcxproj.filters
@@ -166,6 +166,9 @@
     <ClCompile Include="Konfiguration3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Konfiguration4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="colorDef.h">
